syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.DS.xinqipeiproject.SmartOfficeGRPC";
option java_outer_classname = "LightingServiceImpl";

package SmartOfficeGRPC;

service LightingService {
  rpc initialItem(Empty) returns (lightingResponse) {}
  
  rpc changeBrightness(valueRequest) returns (stream valueResponse) {}
  
  rpc onOff(booleanRequest) returns (booleanResponse) {}
  
  rpc changeItemName(stringRequest) returns (stringResponse) {}	

}

message Empty {

}

message stringRequest {
	string text = 1;
}

message stringResponse {
	string text = 1;
}

message booleanRequest {
	bool msg = 2;
}

message booleanResponse {
	bool msg = 2;
}

message valueRequest {
  int32 length = 3;
}

message valueResponse {
  int32 length = 3;
}

message lightingResponse {
	string aname = 4;
	string status = 5;
	int32 brightness = 6;
}
